> improve layout for 1024x768 resoultion, see #1092
# 1.06.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.06.01 (28813) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
# 1.06.00 (26753) 12-19-2008
Fixed bug that disk state graphics not updating in sync with the model.
#1.05.04 (12-5-2008)
Bugfix: Disk states doesn't revert during playback (see #1004)

4-28-2008: picked up fixes for PhetDefaultFont
12-11-2007: Rotation - Fixed: 3. Why does the ruler say units.m?
12-11-2007: Rotation - Fixed: On the first panel the units should be degrees rather than radians.
12-11-2007: Rotation - Moved the pause symbol partly on the disc; increased its size
12-11-2007: Rotation - "Clear" also pauses the simulation
12-11-2007: Rotation - Fixes (see unfuddle)
12-6-2007: Rotation - rewrote layout for play area and torque control panels
12-6-2007: Rotation - rewrote control panel layout
12-4-2007: Rotation - Moved mass graphic (partial side view) to the North West side, increased size range
12-4-2007: Rotation - Internationalized text
12-4-2007: Rotation - Fixed: Platform and ladybug get out of sync when moving the angle slider quickly
12-4-2007: Rotation - Generalized new rendering strategy for rotation platform opening panel
12-4-2007: Rotation - Fixed: Handbrake doesn't move on playback
12-4-2007: Rotation - added a trial implementation for mass graphic
12-3-2007: Rotation - Fixed: memory problem in DefaultTimeSeries when recording for a long time
12-1-2007: Rotation - Added an introductory panel.
11-29-2007: Rotation - Changed label colors for checkboxes
11-27-2007: Rotation - Fixed high-priority memory leaks
11-27-2007: Torque - Fixed the linear acceleration vector to be non-central for constant torque
11-12-2007: Torque - Fixed the linear acceleration vector to be non-central for constant angular acceleration
11-7-2007: Torque - Changed brake graphic from pusher to brake pad