@@ -6,7 +6,6 @@ import edu.colorado.phet.common.phetcommon.application.*;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
 import edu.colorado.phet.rotation.torque.*;
 import edu.colorado.phet.rotation.view.RotationLookAndFeel;
-import edu.colorado.phet.rotation.view.RotationFrameSetup;
 
 /**
  * Author: Sam Reid
@@ -39,7 +38,7 @@ public class TorqueApplication extends PiccoloPhetApplication {
     }
 
     public static void main( final String[] args ) {
-        TorqueApplicationConfig config = new TorqueApplicationConfig( args );
+        PhetApplicationConfig config = new PhetApplicationConfig( args,"rotation","torque" );
         new PhetApplicationLauncher().launchSim( config, new ApplicationConstructor() {
             public PhetApplication getApplication( PhetApplicationConfig config ) {
 
@@ -52,10 +51,4 @@ public class TorqueApplication extends PiccoloPhetApplication {
         } );
     }
 
-    private static class TorqueApplicationConfig extends PhetApplicationConfig {
-        public TorqueApplicationConfig( String[] commandLineArgs ) {
-            super( commandLineArgs, "rotation", "torque" );
-            setFrameSetup( new RotationFrameSetup() );
-        }
-    }
 }
